--- a/gateway/build.gradle
+++ b/gateway/build.gradle
@@ -19,6 +19,10 @@ repositories {
 
 dependencies {
 	implementation 'org.springframework.boot:spring-boot-starter-web'
+	implementation 'org.springframework.cloud:spring-cloud-gateway-dependencies:4.1.5'
+	implementation 'org.springframework.cloud:spring-cloud-starter-gateway:4.1.5'
+	implementation 'org.springframework.cloud:spring-cloud-starter-security:2.2.5.RELEASE'
+	implementation 'org.springframework.boot:spring-boot-starter-oauth2-resource-server:3.3.5'
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
 	testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
 }
